<resources>
    <string name="app_name">New_final</string>
    <string name="app_name_phone">Fitness Flora</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fitness Flora</string>
    <string name="nav_header_subtitle">Bloom with Fitness: Where Every Sweat Sprouts Joy!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_personal_goal">Add A Personal Goal</string>
    <string name="menu_challenge_group">Create A Challenge Group</string>

    <!--    login page-->
    <string name="email">Enter your email address </string>
    <string name="password">Enter your password </string>
    <string name="log_in">Log in </string>
    <string name="sign_up">Sign up </string>
    <string name="forget_password">Forgot password?</string>

    <!--    profile page-->
    <string name="button_home">Home </string>
    <string name="button_groups">My Groups </string>
    <string name="button_workouts">Workout History </string>
    <string name="button_logWorkout">+ Log Workout </string>
    <string name="energyPoints_label">Total Energy Points </string>
    <string name="init_energyPoints_number">0 </string>
    <string name="personal_goals">Personal Goals: </string>
    <string name="no_workouts">No Workout History. Log some workouts to get started!</string>
    <string name="no_goals">No Personal Goals. Set some Personal Goals to get started!</string>
    <string name="no_groups">No Challenge Groups. Join a Challenge Group to get started!</string>

    <!--    personal goal page-->
    <string name="pg_title">Add a Personal Goal </string>
    <string name="pg_activityLabel">Activity:</string>
    <string name="pg_metricLabel">Metric Type:</string>
    <string name="pg_amountLabel">Metric Amount:</string>
    <string name="pg_durationLabel">Duration (Due Date):</string>
    <string name="pg_buttonLabel">Create Goal</string>

    <!--    Add users page-->
    <string name="pg_title_users">Add Users</string>

    <string-array name="activity_options">
        <item>Run</item>
        <item>Calisthenics</item>
        <item>Other</item>
    </string-array>


    <string-array name="metric_options">
        <item>Miles</item>
        <item>Minutes</item>
        <item>Energy points</item>
    </string-array>

    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="groupNm">Huskies</string>
    <string name="group_challenge_details">Group Challenge Details</string>
    <string name="points_lbl">Amount </string>
    <string name="percent_to_goal_lbl">Percent to Goal </string>
    <string name="description_lbl">Description </string>
    <string name="metric_lbl">Metric </string>
    <string name="time_span_lbl">Time Span </string>
    <string name="leaderboard_lbl">Leaderboard</string>
    <string name="enter_name">Enter Name</string>
    <string name="create_challenge_group">Create Challenge Group</string>
    <string name="group_details">Group Details</string>
    <string name="workout_goal_details">Workout Goal Details</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="due_date">Due Date</string>
    <string name="select_date">Select Date</string>
    <string name="add_group">Add Group +</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="points">Points</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_your_description_optional">Enter your description (optional)</string>
    <string name="add_members">Add Members +</string>
    <string name="my_groups">My Groups</string>
    <string name="log_workout">Log Workout</string>
    <string name="clear_fields">Clear Fields</string>

</resources>