<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.northeastern.new_final.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_personal_goal"
        android:name="edu.northeastern.new_final.ui.personalGoal.PersonalGoalFragment"
        android:label="@string/menu_personal_goal"
        tools:layout="@layout/fragment_personal_goal" />

    <fragment
        android:id="@+id/nav_challenge_group"
        android:name="edu.northeastern.new_final.ui.challengeGroup.ChallengeGroupFragment"
        android:label="@string/menu_challenge_group"
        tools:layout="@layout/fragment_challenge_group" />
</navigation>