<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/distanceToggle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/editGroupName"
            android:layout_width="166dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/charcoal_outline"
            android:hint="@string/enter_name"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/longResponseEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewActivity" />

        <View
            android:id="@+id/greenStripe"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:background="#006838"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/group_details"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/greenStripe" />

        <TextView
            android:id="@+id/textViewGoalLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/workout_goal_details"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/longResponseEditText" />

        <Spinner
            android:id="@+id/spinnerWorkoutType"
            android:layout_width="163dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/charcoal_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGoalLbl" />

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="166dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/charcoal_outline"
            android:hint="@string/enter_amount"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerWorkoutType" />

        <TextView
            android:id="@+id/metricTypeLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/editTextAmount"
            app:layout_constraintEnd_toEndOf="@+id/editTextAmount"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/editTextAmount"
            app:layout_constraintTop_toTopOf="@+id/editTextAmount" />

        <TextView
            android:id="@+id/dueDateLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/due_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAmount" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="376dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/charcoal_outline"
            android:drawableEnd="@drawable/calendar_icon"
            android:focusable="false"
            android:hint="@string/select_date"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/dueDateLbl" />

        <LinearLayout
            android:id="@+id/toggleButton_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintBottom_toTopOf="@+id/editTextAmount"
            app:layout_constraintTop_toBottomOf="@+id/textViewGoalLbl"
            app:layout_constraintStart_toEndOf="@+id/spinnerWorkoutType"
            app:layout_constraintEnd_toEndOf="parent">

        <ToggleButton
            android:id="@+id/toggleButtonTime"
            android:layout_width="52dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/toggle_button_border"
            android:checked="false"
            android:text="@string/time"
            android:textColor="#36454F"
            android:textOff="@string/time"
            android:textOn="@string/time"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/dueDateLbl"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@+id/toggleButtonEP"
            app:layout_constraintTop_toBottomOf="@+id/textViewGoalLbl"
            app:layout_constraintVertical_bias="0" />

            <ToggleButton
                android:id="@+id/toggleButtonDistance"
                android:layout_width="74dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="64dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_button_border"
                android:checked="true"
                android:text="@string/distance"
                android:textColor="#36454F"
                android:textOff="@string/distance"
                android:textOn="@string/distance"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/dueDateLbl"
                app:layout_constraintEnd_toStartOf="@+id/toggleButtonEP"

                app:layout_constraintStart_toEndOf="@+id/spinnerWorkoutType"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalLbl"
                app:layout_constraintVertical_bias="0.282" />

            <ToggleButton
                android:id="@+id/toggleButtonEP"
                android:layout_width="66dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/toggle_button_border"
                android:checked="true"
                android:text="@string/points"
                android:textColor="#36454F"
                android:textOff="@string/points"
                android:textOn="@string/points"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/dueDateLbl"
                app:layout_constraintEnd_toStartOf="parent"

                app:layout_constraintStart_toEndOf="@+id/toggleButtonDistance"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalLbl"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>

        <Button
            android:id="@+id/uploadImgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/upload_image"
            android:background="@drawable/button_style"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/longResponseEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editGroupName"
            app:layout_constraintTop_toBottomOf="@+id/textViewActivity" />

        <EditText
            android:id="@+id/longResponseEditText"
            android:layout_width="352dp"
            android:layout_height="105dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/charcoal_outline"
            android:gravity="start"
            android:hint="@string/enter_your_description_optional"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="10"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/textViewGoalLbl"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editGroupName" />

        <LinearLayout
            android:id="@+id/button_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddGroupMembersBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonAddGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="0dp"
            android:windowSoftInputMode="adjustNothing"
            android:background="@drawable/button_style"
            android:backgroundTint="@android:color/transparent"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/add_group"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:windowSoftInputMode="adjustNothing"
            android:text="@string/clear"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <Button
            android:id="@+id/AddGroupMembersBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:windowSoftInputMode="adjustNothing"
            android:background="@drawable/button_style"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/add_members"
            app:layout_constraintBottom_toTopOf="@+id/button_ll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/membersTV"
            app:layout_constraintVertical_bias="0.295" />

        <TextView
            android:id="@+id/membersTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="Members: "
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>