<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">




    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewGarden" />

    <!-- Garden image -->
    <ImageView
        android:id="@+id/imageViewGarden"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/daisy_img" />


    <!-- Profile picture -->
    <FrameLayout
        android:id="@+id/profile_FV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <edu.northeastern.new_final.CircularImageView
        android:id="@+id/imageView_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/roadrunner_img"
        android:scaleType="centerCrop"
        android:padding="8dp"
        android:elevation="2dp"
        tools:ignore="ContentDescription" />


    </FrameLayout>

    <!-- Thin separator line (sits below garden image) -->
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#9acc69"
        app:layout_constraintTop_toBottomOf="@id/imageViewGarden" />

    <!-- Username -->
    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Username"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="125dp"
        app:layout_constraintStart_toStartOf="@id/profile_FV"
        app:layout_constraintEnd_toEndOf="@id/profile_FV"
        app:layout_constraintTop_toBottomOf="@id/profile_FV"/>

    <!-- Bottom bar with three clickable buttons -->
    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Button 1 with icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <!-- replace star with house icon -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_icon"
                android:contentDescription="Button Home Icon"/>

            <TextView
                android:id="@+id/button_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/button_home"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Button 2 with icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <!-- replace star with appropriate group icon -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_icon"
                android:contentDescription="Button Groups Icon"/>

            <TextView
                android:id="@+id/button_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/button_groups"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Button 3 with icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <!-- replace star with appropriate workout history icon -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_icon"
                android:contentDescription="Button Workouts Icon"/>

            <TextView
                android:id="@+id/button_workouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/button_workouts"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

    </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>